Fixed tree alignment.

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -6,3 +6,8 @@
 #delay {
 	width: 70px;
 }
+
+#dirchooser {
+	text-align: left;
+}
+
